// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graded-group should snapshot: initial render (mobile: false) 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="0"
    >
      <hr
        aria-hidden="true"
      />
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <h2>
        Check your understanding!
      </h2>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="perseus-graded-group"
          >
            <div
              class="title_1lagzkb"
            >
              Metabolic strategies of bacteria
            </div>
            <div
              class="perseus-renderer perseus-renderer-responsive"
            >
              <div
                class="paragraph"
                data-perseus-paragraph-index="0"
              >
                <ol
                  start="1"
                >
                  <li>
                    <div
                      class="paragraph"
                    >
                      <strong>
                        Which of the following statements about metabolic strategies of bacteria are true?
                      </strong>
                    </div>
                    <div
                      class="paragraph"
                    >
                      <div
                        class="perseus-widget-container widget-nohighlight widget-block"
                      >
                        <div
                          class="categorizer-container "
                        >
                          <table
                            class="categorizer-table mobileTable_1wmcwov"
                          >
                            <thead>
                              <tr>
                                <td
                                  class="emptyHeaderCell_1mttrgd"
                                />
                                <th
                                  class="header_whrfk4"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        True
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <th
                                  class="header_whrfk4"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        False
                                      </div>
                                    </div>
                                  </div>
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria conduct photosynthesis and produce oxygen, much like plants.
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <span
                                      class="radioSpan_1mq3xs9"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <span
                                      class="radioSpan_1mq3xs9"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Bacteria are always autotrophic but they may get energy from either light or chemical sources.
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <span
                                      class="radioSpan_1mq3xs9"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <span
                                      class="radioSpan_1mq3xs9"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some chemosynthetic bacteria introduce energy and fixed carbon into communities where photosynthesis is not possible (e.g., deep-sea vents).
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <span
                                      class="radioSpan_1mq3xs9"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <span
                                      class="radioSpan_1mq3xs9"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria live symbiotically inside of host organisms and provide the host with nutrients.
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <span
                                      class="radioSpan_1mq3xs9"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <span
                                      class="radioSpan_1mq3xs9"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </li>
                </ol>
              </div>
            </div>
            <p
              aria-live="polite"
              role="status"
            />
            <button
              aria-disabled="false"
              class="button_vr44p2-o_O-reset_1ck4g21-o_O-shared_1jpsfmg-o_O-default_1l1gmds"
              role="button"
              type="button"
            >
              <span
                class="text_f1191h-o_O-LabelLarge_16mkhxv-o_O-text_1kowsup"
              >
                Check
              </span>
            </button>
            <button
              class="showHintLink_oak3yy"
              tabindex="0"
            >
              Explain
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`graded-group should snapshot: initial render (mobile: true) 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="0"
    >
      <hr
        aria-hidden="true"
      />
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <h2>
        Check your understanding!
      </h2>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="gradedGroup_14sgdtb perseus-graded-group"
          >
            <div
              class="title_1lagzkb"
            >
              Metabolic strategies of bacteria
            </div>
            <div
              class="perseus-renderer perseus-renderer-responsive"
            >
              <div
                class="paragraph"
                data-perseus-paragraph-index="0"
              >
                <ol
                  start="1"
                >
                  <li>
                    <div
                      class="paragraph"
                    >
                      <strong>
                        Which of the following statements about metabolic strategies of bacteria are true?
                      </strong>
                    </div>
                    <div
                      class="paragraph"
                    >
                      <div
                        class="perseus-widget-container widget-nohighlight widget-block"
                      >
                        <div
                          class="categorizer-container fullBleedContainer_8ybp6"
                        >
                          <table
                            class="categorizer-table mobileTable_1wmcwov"
                          >
                            <thead>
                              <tr>
                                <td
                                  class="emptyHeaderCell_1mttrgd"
                                />
                                <th
                                  class="header_whrfk4"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        True
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <th
                                  class="header_whrfk4"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        False
                                      </div>
                                    </div>
                                  </div>
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria conduct photosynthesis and produce oxygen, much like plants.
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <input
                                      class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                                      name="perseus_radio_9_0"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <input
                                      class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                                      name="perseus_radio_9_0"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Bacteria are always autotrophic but they may get energy from either light or chemical sources.
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <input
                                      class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                                      name="perseus_radio_9_1"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <input
                                      class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                                      name="perseus_radio_9_1"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some chemosynthetic bacteria introduce energy and fixed carbon into communities where photosynthesis is not possible (e.g., deep-sea vents).
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <input
                                      class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                                      name="perseus_radio_9_2"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <input
                                      class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                                      name="perseus_radio_9_2"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria live symbiotically inside of host organisms and provide the host with nutrients.
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <input
                                      class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                                      name="perseus_radio_9_3"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <input
                                      class="responsiveInput_1q2zj3l-o_O-responsiveRadioInput_17um91a"
                                      name="perseus_radio_9_3"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </li>
                </ol>
              </div>
            </div>
            <button
              class="showHintLink_oak3yy"
              tabindex="0"
            >
              Explain
            </button>
            <div
              style="display: flex; align-items: center; height: 68px; margin: 16px -16px -16px -16px; padding-left: 16px; padding-right: 10px; border-top: 1px solid rgba(33,36,44,0.50); background-color: white; justify-content: space-between;"
            >
              <span />
              <button
                aria-disabled="true"
                class="button_vr44p2-o_O-reset_1ck4g21-o_O-shared_1jpsfmg-o_O-default_ttsi8d-o_O-disabled_okj0ts"
                role="button"
                type="button"
              >
                <span
                  class="text_f1191h-o_O-LabelLarge_16mkhxv-o_O-text_1kowsup"
                >
                  Check
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
